--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
     "irc_serb": "irc.rizon.net",
     "irc_port": 7000,
     "irc_nick": "birdbridge",
-    "irc_chan": "#birdchat"
+    "irc_chan": "#birdchat",
+    "passthru_nick": "messages sent from this IRC nick are not prefixed by <nick>"
 }
